--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,4 +1,10 @@
-
+@Manual{opendatatoronto,
+    title = {opendatatoronto: Access the City of Toronto Open Data Portal},
+    author = {Sharla Gelfand},
+    year = {2022},
+    note = {R package version 0.1.5},
+    url = {https://CRAN.R-project.org/package=opendatatoronto},
+  }
 
 @Manual{citeR,
     title = {R: A Language and Environment for Statistical Computing},
@@ -8,7 +14,38 @@
     year = {2023},
     url = {https://www.R-project.org/},
   }
+
+ @Article{tidyverse,
+    title = {Welcome to the {tidyverse}},
+    author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
+    year = {2019},
+    journal = {Journal of Open Source Software},
+    volume = {4},
+    number = {43},
+    pages = {1686},
+    doi = {10.21105/joss.01686},
+  }
   
+@BOOK{ggplot2,
+  title     = "Ggplot2: Elegant graphics for data analysis",
+  author    = "Wickham, Hadley",
+  publisher = "Springer International Publishing",
+  series    = "Use R!",
+  edition   =  2,
+  month     =  jun,
+  year      =  2016,
+  address   = "Cham, Switzerland",
+  language  = "en",
+  isbn      = "9783319242774"
+} 
+
+@Manual{dplyr,
+  title = {dplyr: A Grammar of Data Manipulation},
+  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller and Davis Vaughan},
+  year = {2023},
+  note = {R package version 1.1.4, https://github.com/tidyverse/dplyr},
+  url = {https://dplyr.tidyverse.org},
+}
   
 @Article{thereferencecanbewhatever,
     title = {Welcome to the {tidyverse}},
@@ -30,18 +67,6 @@
     url = {https://CRAN.R-project.org/package=Lahman},
   }  
   
-  
-@article{gebru2021datasheets,
-  title={Datasheets for datasets},
-  author={Gebru, Timnit and Morgenstern, Jamie and Vecchione, Briana and Vaughan, Jennifer Wortman and Wallach, Hanna and Iii, Hal Daum{\'e} and Crawford, Kate},
-  journal={Communications of the ACM},
-  volume={64},
-  number={12},
-  pages={86--92},
-  year={2021},
-  publisher={ACM New York, NY, USA}
-}
-
 @Misc{rstanarm,
     title = {rstanarm: {Bayesian} applied regression modeling via {Stan}},
     author = {Ben Goodrich and Jonah Gabry and Imad Ali and Sam Brilleman},
@@ -49,26 +74,4 @@
     year = {2022},
     url = {https://mc-stan.org/rstanarm/},
   }
-  
-@Manual{palmerpenguins,
-    title = {palmerpenguins: Palmer Archipelago (Antarctica) penguin data},
-    author = {Allison Marie Horst and Alison Presmanes Hill and Kristen B Gorman},
-    year = {2020},
-    note = {R package version 0.1.0},
-    doi = {10.5281/zenodo.3960218},
-    url = {https://allisonhorst.github.io/palmerpenguins/},
-  }
-  
-  
-@Article{rohan,
-    title = {Welcome to the {tidyverse}},
-    author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
-    year = {2019},
-    journal = {Journal of Open Source Software},
-    volume = {4},
-    number = {43},
-    pages = {1686},
-    doi = {10.21105/joss.01686},
-  }  
-  
   
